--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "cloudscraper": "^1.4.1",
+    "dict": "^1.4.0",
     "jsonic": "^0.3.0",
     "mysql": "^2.15.0",
     "node-cron": "^1.2.1",
